--- a/frontend/src/app/components/admin/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/components/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,62 @@
-<p>admin-dashboard works!</p>
+  <body>
+    <!-- Header -->
+    <header class="bg-primary text-white py-3">
+      <div class="container text-center">
+        <h1>Garden Scaping</h1>
+      </div>
+    </header>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarNavAltMarkup"
+        >
+          <div class="navbar-nav">
+            <a routerLink="/admin/firms" class="nav-item btn btn-outline-primary ms-2">Firms</a>
+            <a routerLink="/admin/decorators" class="nav-item btn btn-outline-primary ms-2">Decorators</a>
+            <a routerLink="/admin/owners" class="nav-item btn btn-outline-primary ms-2">Owners</a>
+            
+            <button
+              type="button"
+              class="btn btn-outline-primary logout-btn ms-2"
+              (click)="logout()"
+            >
+              Log out
+            </button>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Main Content -->
+    <main
+      class="container-fluid d-flex flex-column justify-content-start"
+    >
+
+    <div class="content-container">
+      <router-outlet></router-outlet>
+    </div>
+
+        
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white py-3">
+      <div class="container text-center">
+        <p>&copy; 2024 Marko Jovanovic</p>
+      </div>
+    </footer>
+  </body>
