Updating user data works

--- a/frontend/src/app/components/owner/owner-dashboard/owner-dashboard.component.html
+++ b/frontend/src/app/components/owner/owner-dashboard/owner-dashboard.component.html
@@ -23,10 +23,10 @@
           id="navbarNavAltMarkup"
         >
           <div class="navbar-nav">
-            <a routerLink="/guest/profile" class="nav-item btn btn-outline-primary ms-2">Profile</a>
-            <a routerLink="/guest/firms" class="nav-item btn btn-outline-primary ms-2">Firms</a>
-            <a routerLink="/guest/bookings" class="nav-item btn btn-outline-primary ms-2">Bookings</a>
-            <a routerLink="/guest/maintenence" class="nav-item btn btn-outline-primary ms-2">Maintenence</a>
+            <a routerLink="/owner/profile" class="nav-item btn btn-outline-primary ms-2">Profile</a>
+            <a routerLink="/owner/firms" class="nav-item btn btn-outline-primary ms-2">Firms</a>
+            <a routerLink="/owner/bookings" class="nav-item btn btn-outline-primary ms-2">Bookings</a>
+            <a routerLink="/owner/maintenence" class="nav-item btn btn-outline-primary ms-2">Maintenence</a>
 
             <button
               type="button"
