--- a/frontend/src/app/components/user-profile/user-profile.component.html
+++ b/frontend/src/app/components/user-profile/user-profile.component.html
@@ -2,9 +2,9 @@
     <div class="col-md-6">
         <div class="container">
             <div class="card" style="width: 17.25rem">
-                <img src="{{ user.profile_photo }}" class="img-fluid" alt="" />
+                <img src="{{ user.profilePhoto }}" class="img-fluid" alt="" />
                 <div class="card-body">
-                    <form (ngSubmit)="update_photo()">
+                    <form (ngSubmit)="updatePhoto()">
                         <input
                             type="file"
                             class="form-control"
